...
                                <rect key="frame" x="53.5" y="238.5" width="307" height="419.5"/>
                                <subviews>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="5Jl-gE-8Yf">
                                        <rect key="frame" x="0.0" y="0.0" width="307" height="32"/>
                                        <segments>
                                            <segment title="Circle"/>
                                            <segment title="Square"/>
                                        </segments>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="segmentControl"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="onSegmentValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="RcH-5z-AuW"/>
                                        </connections>
                                    </segmentedControl>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Y0V-cc-hzT">
...
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="X Value" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y8b-kS-gNu" userLabel="X Value Field">
                                                <rect key="frame" x="0.0" y="0.0" width="307" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="xValueField"/>
                                                </userDefinedRuntimeAttributes>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Y Value" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N0g-xQ-AK6" userLabel="Y Value Field">
                                                <rect key="frame" x="0.0" y="42" width="307" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="yValueField"/>
                                                </userDefinedRuntimeAttributes>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Radius: 25" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p15-nV-Sdb">
                                                <rect key="frame" x="0.0" y="84" width="307" height="13.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                </connections>
                                            </slider>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TAp-EL-sV8" userLabel="Create Button">
                                                <rect key="frame" x="0.0" y="262.5" width="307" height="30"/>
                                                <state key="normal" title="Create Circle"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="create"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="buttonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KZE-by-FRm"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aof-jO-Llk" userLabel="Random Draw Button">
                                                <rect key="frame" x="0.0" y="300.5" width="307" height="30"/>
                                                <state key="normal" title="Random Draw"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="randomDraw"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="drawRandom:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gPg-EJ-JmE"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Paq-fa-3qT">
...
