...
        circleView.accessibilityIdentifier = "circle_\(circleCtr)"
        circleView.draw(duration: TimeInterval(durationSlider.value))
    }

    func displayAlert(_ text: String) {
        let alert = UIAlertController(title: "Error", message: text, preferredStyle: .alert)
        let alertAction = UIAlertAction(title: "OK", style: .cancel, handler: { _ in })
        alert.addAction(alertAction)
        present(alert, animated: true)

        let duration: Double = 5
        DispatchQueue.main.asyncAfter(deadline: DispatchTime.now() + duration) {
            alert.dismiss(animated: true)
...
